[FIXED JENKINS-37549] - Fixed background color for ComboBoxList (#2511)
Hard to see anything with Gray background and White Text.
Style is in line with Selects and other form inputs.

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -1160,8 +1160,8 @@ table.parameters > tbody:hover {
 .comboBoxList {
   border: 1px solid #000;
   overflow: visible;
-  color: MenuText;
-  background-color: Menu;
+  background-color: white;
+  color: black;
 }
 .comboBoxSelectedItem {
   background-color: Highlight;
